play, pause, back working but only for one loop through queue

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         </div>
       </main>
     </div>
-    <div id="now-playing">
-
+    <div id="controls-container">
+  
     </div>
     <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
     <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
