--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="animated fadeIn" id="message">
       <p>Please change to full screen for best viewing experience...</p>
       <p>When finished, click the button below.</p>
-      <button type="submit" name="button" id="enter-site">enter</button>
+      <button type="submit" name="button" id="enter-button">enter</button>
     </div>
 
     <div id="content">
@@ -97,7 +97,7 @@
       </main>
     </div>
     <div id="controls-container">
-  
+
     </div>
     <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
     <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
