update to background

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="animated fadeIn" id="message">
       <p>Please change to full screen for best viewing experience...</p>
       <p>When finished, click the button below.</p>
-      <button type="submit" name="button" id="enter-button">enter</button>
+      <button type="submit" name="button" id="enter-button">Get Started</button>
     </div>
 
     <div id="content">
@@ -24,7 +24,7 @@
             <h2 class="right" id="read-project">Read about the project</h2>
           <div class="center" id="call-to-action">
             <p class="instructions">Select a genre to discover fresh, new music...</p>
-            <button type="submit" name="button" id="genre-button">select genre</button>
+            <button type="submit" name="button" id="genre-button">Select Genre</button>
           </div>
         </div>
       </nav>
