--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
 
     <div class="animated fadeIn" id="message">
-      <p>Please change to full screen for best viewing experience...</p>
-      <p>When finished, click the button below.</p>
+      <p class="instructions">Please change to full screen for best viewing experience...</p>
+      <p class="instructions2">When finished, click the button below.</p>
       <button type="submit" name="button" id="enter-button">Get Started</button>
     </div>
 
@@ -104,6 +104,9 @@
     <script src="http://www.johnblazek.net/codepen-resources/3d-carousel/js/libs.min.js"></script>
     <script src="js/player.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+    <script src="js/textillate.js"></script>
+    <script src="js/lettering.js"></script>
+    <script src="js/fittext.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
