changed action button. added hover effect

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="animated fadeIn" id="message">
       <p class="instructions">Please change to full screen for best viewing experience...</p>
       <p class="instructions2">When finished, click the button below.</p>
-      <button type="submit" name="button" id="enter-button">Get Started</button>
+      <button type="submit" name="button" id="enter-button">ENTER</button>
     </div>
 
     <div id="content">
@@ -23,8 +23,8 @@
             <h1 class="left" id="logo">Music Circle</h1>
             <h2 class="right" id="read-project">Read about the project</h2>
           <div class="center" id="call-to-action">
-            <p class="instructions">Select a genre to discover fresh, new music...</p>
-            <button type="submit" name="button" id="genre-button">Select Genre</button>
+            <p class="genre-instructions">Select a genre to discover fresh, new music...</p>
+            <button type="submit" name="button" id="genre-button">select genre</button>
           </div>
         </div>
       </nav>
